fix contrastes

--- a/style.css
+++ b/style.css
@@ -772,20 +772,22 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #F3976C;
+    background-color: #ac6443;
 }
 
 .tc-white {
-    color: #F3976C!important;
+    color: #FFFFFF!important;
+    position: relative;
+    z-index: 10;
 }
 
 .btn-atomic-tangerine {
-    background: #F3976C;
+    background: #ac6443;
     color: #FFFFFF!important;
 }
 
 .btn-atomic-tangerine:hover {
-    background: #c27956!important;
+    background: #F3976C!important;
     color: #FFFFFF!important;
 }
 
